# finfolio

./: .env.example  .gitignore  index.html  package-lock.json  package.json  start.sh  tailwind.config.ts  vite.config.ts
api/: _lib.js  health.js  quotes.js  search.js
api/chart/: [symbol].js
api/quote/: [symbol].js
server/: index.js  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/charts/: LineChart.tsx  SparkLine.tsx
src/components/dashboard/: MetricCard.tsx  PositionsTable.tsx
src/components/layout/: MainShell.tsx  Sidebar.tsx
src/components/portfolio/: LivePerformanceTracker.tsx  PortfolioChart.tsx
src/components/trades/: RecentTrades.tsx  TradeModal.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Skeleton.tsx  index.ts
src/components/watchlist/: WatchlistWidget.tsx
src/hooks/: index.ts  useDemoData.ts  useQuoteRefresh.ts
src/pages/: DashboardPage.tsx  ExpensesPage.tsx  IncomePage.tsx  PortfolioPage.tsx  SettingsPage.tsx  StockSearchPage.tsx  TradesPage.tsx  WatchlistPage.tsx
src/services/api/: yahooFinance.ts
src/services/db/: database.ts  migrations.ts
src/stores/: expenseStore.ts  incomeStore.ts  portfolioStore.ts  quotesStore.ts  stockSearchStore.ts  tradesStore.ts  uiStore.ts  watchlistStore.ts
src/types/: models.ts
src/utils/: formatters.ts
